--- a/spring-boot-web/src/main/resources/templates/perfil.html
+++ b/spring-boot-web/src/main/resources/templates/perfil.html
@@ -5,12 +5,13 @@
 <title th:text="${titulo}"></title>
 </head>
 <body>
-<h1 th:text="${titulo}"></h1>
+	<h1 th:text="${titulo}"></h1>
 
-<span th:text="${usuario.nombre}"></span>
-<span th:text="${usuario.apellido}"></span>
-<br>
-<span th:if="${usuario.email}" th:text="${usuario.email}"></span>
-<span th:if="${usuario.email == null}">El usuario no tiene correo</span>
+	<span th:text="${usuario.nombre}"></span>
+	<span th:text="${usuario.apellido}"></span>
+	<br>
+	<span th:if="${usuario.email}" th:text="${usuario.email}"></span>
+	<span th:if="${usuario.email == null}">El usuario no tiene
+		correo</span>
 </body>
 </html>
