--- a/spring-boot-web/src/main/resources/templates/variables/ver.html
+++ b/spring-boot-web/src/main/resources/templates/variables/ver.html
@@ -2,10 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8" />
-<title>Recibir parámetros del Request HTTP GET - URL</title>
+<title>Recibir parámetros de la ruta (@PathVariable)</title>
 </head>
 <body>
-	<h1>Recibir parámetros del Request HTTP GET - URL</h1>
+	<h1>Recibir parámetros de la ruta (@PathVariable)</h1>
 	<div th:text="${resultado}"></div>
 </body>
 </html>
