--- a/spring-boot-web/src/main/resources/templates/params/index.html
+++ b/spring-boot-web/src/main/resources/templates/params/index.html
@@ -2,10 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8" />
-<title>Enviar parámetros del request HTTP GET - URL</title>
+<title>Enviar parámetros del Request HTTP GET - URL</title>
 </head>
 <body>
-	<h1>Enviar parámetros del request HTTP GET - URL</h1>
+	<h1>Enviar parámetros del Request HTTP GET - URL</h1>
 	<ul>
 		<li><a th:href="@{/params/string(texto='Hola mundo')}">/params/string?texto=Hola mundo</a></li>
 		<li><a th:href="@{/params/string(texto='John Doe')}">/params/string?texto=John Doe</a></li>
