--- a/spring-boot-data-jpa/src/main/resources/templates/form.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/form.html
@@ -18,8 +18,8 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
-				<li class="nav-item active"><a class="nav-link" th:href="@{/form}">Formulario
-				</a></li>
+				<li class="nav-item active"><a class="nav-link"
+					th:href="@{/form}">Formulario </a></li>
 				<li class="nav-item"><a class="nav-link" th:href="@{/listar}">Clientes</a>
 				</li>
 			</ul>
@@ -31,23 +31,29 @@
 			class="text-secondary border border-success border-top-0 border-left-0 border-right-0"
 			th:text="${titulo}"></h1>
 		<form th:action="@{/form}" th:object="${cliente}" method="post">
-			<table>
-				<tr>
-					<td>Nombre</td>
-					<td><input type="text" th:field="*{nombre}" class="form-control" /></td>
-				</tr>
-				<tr>
-					<td>Apellido</td>
-					<td><input type="text" th:field="*{apellido}" class="form-control" /></td>
-				</tr>
-				<tr>
-					<td>Email</td>
-					<td><input type="email" th:field="*{email}" class="form-control" /></td>
-				</tr>
-				<tr>
-					<td><input type="submit" value="Crear Cliente" class="btn btn-primary" /></td>
-				</tr>
-			</table>
+			<div class="form-group row">
+				<label class="col-form-label col-sm-2">Nombre</label>
+				<div class="col-sm-6">
+					<input type="text" th:field="*{nombre}" class="form-control" />
+				</div>
+			</div>
+			<div class="form-group row">
+				<label class="col-form-label col-sm-2">Apellido</label>
+				<div class="col-sm-6">
+					<input type="text" th:field="*{apellido}" class="form-control" />
+				</div>
+			</div>
+			<div class="form-group row">
+				<label class="col-form-label col-sm-2">Email</label>
+				<div class="col-sm-6">
+					<input type="text" th:field="*{email}" class="form-control" />
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-6">
+					<input type="submit" value="Crear Cliente" class="btn btn-primary" />
+				</div>
+			</div>
 			<input type="hidden" th:field="*{id}" />
 		</form>
 	</div>
