--- a/spring-boot-data-jpa/src/main/resources/templates/form.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/form.html
@@ -49,6 +49,12 @@
 					<input type="text" th:field="*{email}" class="form-control" />
 				</div>
 			</div>
+			<div class="form-group row">
+				<label class="col-form-label col-sm-2">Fecha</label>
+				<div class="col-sm-6">
+					<input type="text" th:field="*{createAt}" class="form-control" />
+				</div>
+			</div>
 			<div class="form-group">
 				<div class="col-sm-6">
 					<input type="submit" value="Crear Cliente" class="btn btn-primary" />
