--- a/spring-boot-data-jpa/src/main/resources/templates/listar.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/listar.html
@@ -18,8 +18,8 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
-				<li class="nav-item active"><a class="nav-link" th:href="@{/form}">Formulario
-				</a></li>
+				<li class="nav-item active"><a class="nav-link"
+					th:href="@{/form}">Formulario </a></li>
 				<li class="nav-item"><a class="nav-link" th:href="@{/listar}">Clientes</a>
 				</li>
 			</ul>
@@ -30,8 +30,10 @@
 		<h1
 			class="text-secondary border border-success border-top-0 border-left-0 border-right-0"
 			th:text="${titulo}"></h1>
-			<a th:href="@{/form}">Crear cliente
-				</a>
+		<p>
+			<a class="btn btn-success btn-xs" th:href="@{/form}">Crear
+				cliente </a>
+		</p>
 		<table class="table table-striped">
 			<thead>
 				<tr>
@@ -40,6 +42,7 @@
 					<th>apellido</th>
 					<th>email</th>
 					<th>fecha</th>
+					<th>Editar</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -49,6 +52,8 @@
 					<td th:text="${cliente.apellido}"></td>
 					<td th:text="${cliente.email}"></td>
 					<td th:text="${cliente.createAt}"></td>
+					<td><a class="btn btn-primary btn-xs"
+						th:href="@{/form/} + ${cliente.id}" th:text="'Editar'"></a></td>
 				</tr>
 			</tbody>
 		</table>
