--- a/spring-boot-data-jpa/src/main/resources/templates/listar.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/listar.html
@@ -42,7 +42,8 @@
 					<th>apellido</th>
 					<th>email</th>
 					<th>fecha</th>
-					<th>Editar</th>
+					<th>editar</th>
+					<th>eliminar</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -54,6 +55,8 @@
 					<td th:text="${cliente.createAt}"></td>
 					<td><a class="btn btn-primary btn-xs"
 						th:href="@{/form/} + ${cliente.id}" th:text="'Editar'"></a></td>
+					<td><a class="btn btn-danger btn-xs"
+						th:href="@{/eliminar/} + ${cliente.id}" th:text="'Eliminar'" onclick="return confirm('¿Estás seguro que quiere eliminar?');"></a></td>
 				</tr>
 			</tbody>
 		</table>
