--- a/spring-boot-data-jpa/src/main/resources/templates/listar.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/listar.html
@@ -40,6 +40,9 @@
 						</tr>
 					</tbody>
 				</table>
+				<div class="d-flex align-items-center justify-content-center">
+				<nav th:replace="paginator-nav :: paginator"></nav>
+				</div>
 			</div>
 		</div>
 	</div>
