--- a/spring-boot-data-jpa/src/main/resources/templates/form.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/form.html
@@ -51,6 +51,12 @@
 								th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
 						</div>
 					</div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-2" for="file">Imagen</label>
+						<div class="col-sm-6">
+							<input type="file" name="file" class="form-control" />
+						</div>
+					</div>
 					<div class="form-group">
 						<div class="col-sm-6">
 							<input type="submit" value="Crear Cliente"
