Autocomplete jquery-ui

--- a/spring-boot-data-jpa/src/main/resources/templates/factura/form.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/form.html
@@ -8,9 +8,14 @@
 		<div class="card bg-dark">
 			<div class="card-header" th:text="${titulo}"></div>
 			<div class="card-body">
+				<h4 class="card-title">
+					<a class="btn btn-light btn-xs"
+						th:href="@{'/ver/' + ${factura.cliente.id}}"
+						th:text="'&laquo; Volver'"></a>
+				</h4>
+
 				<form th:action="@{/factura/form}" th:object="${factura}"
 					method="post">
-
 					<div class="form-group row">
 						<label class="col-form-label col-sm-2">Cliente</label>
 						<div class="col-sm-6">
@@ -19,7 +24,6 @@
 								class="form-control" disabled='disabled' />
 						</div>
 					</div>
-
 					<div class="form-group row">
 						<label class="col-form-label col-sm-2">Descripción</label>
 						<div class="col-sm-6">
@@ -38,11 +42,19 @@
 								class="btn btn-secondary" />
 						</div>
 					</div>
+					<div class="form-group row">
+						<label class="col-form-label col-sm-2">Buscar producto</label>
+						<div class="col-sm-6">
+							<input type="text" name="buscar_producto" id="buscar_producto"
+								class="form-control" />
+						</div>
+					</div>
 				</form>
 			</div>
 		</div>
 	</div>
 
 	<footer th:replace="layout/layout :: footer"></footer>
+	<script th:replace="factura/js/autocomplete_productos :: javascript"></script>
 </body>
 </html>
