--- a/spring-boot-data-jpa/src/main/resources/templates/form.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/form.html
@@ -14,7 +14,8 @@
 					</ul>
 				</div>
 
-				<form th:action="@{/form}" th:object="${cliente}" method="post" enctype="multipart/form-data">
+				<form th:action="@{/form}" th:object="${cliente}" method="post"
+					enctype="multipart/form-data">
 					<div class="form-group row">
 						<label class="col-form-label col-sm-2">Nombre</label>
 						<div class="col-sm-6">
