--- a/spring-boot-data-jpa/src/main/resources/templates/listar.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/listar.html
@@ -16,22 +16,27 @@
 				<table class="table table-striped">
 					<thead>
 						<tr>
-							<th>id</th>
-							<th>nombre</th>
-							<th>apellido</th>
-							<th>email</th>
-							<th>fecha</th>
-							<th>editar</th>
-							<th>eliminar</th>
+							<th>Id</th>
+							<th>Nombre</th>
+							<th>Apellido</th>
+							<th>Email</th>
+							<th>Fecha</th>
+							<th>Crear factura</th>
+							<th>Editar</th>
+							<th>Eliminar</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr th:each="cliente: ${clientes}">
-							<td><a class="btn btn-primary btn-xs" th:href="@{/ver/} + ${cliente.id}"  th:text="${cliente.id}"></a></td>
+							<td><a class="btn btn-primary btn-xs"
+								th:href="@{/ver/} + ${cliente.id}" th:text="${cliente.id}"></a></td>
 							<td th:text="${cliente.nombre}"></td>
 							<td th:text="${cliente.apellido}"></td>
 							<td th:text="${cliente.email}"></td>
 							<td th:text="${cliente.createAt}"></td>
+							<td><a class="btn btn-success btn-xs"
+								th:href="@{/factura/form/} + ${cliente.id}"
+								th:text="'Crear factura'"></a></td>
 							<td><a class="btn btn-primary btn-xs"
 								th:href="@{/form/} + ${cliente.id}" th:text="'Editar'"></a></td>
 							<td><a class="btn btn-danger btn-xs"
@@ -41,7 +46,7 @@
 					</tbody>
 				</table>
 				<div class="d-flex align-items-center justify-content-center">
-				<nav th:replace="paginator-nav :: paginator"></nav>
+					<nav th:replace="paginator-nav :: paginator"></nav>
 				</div>
 			</div>
 		</div>
