--- a/spring-boot-data-jpa/src/main/resources/templates/factura/form.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/form.html
@@ -36,17 +36,18 @@
 							<textarea th:field="*{observacion}" class="form-control"></textarea>
 						</div>
 					</div>
-					<div class="form-group">
-						<div class="col-sm-6">
-							<input type="submit" value="Crear Factura"
-								class="btn btn-secondary" />
-						</div>
-					</div>
 					<div class="form-group row">
 						<label class="col-form-label col-sm-2">Buscar producto</label>
 						<div class="col-sm-6">
 							<input type="text" name="buscar_producto" id="buscar_producto"
 								class="form-control" />
+						</div>
+					</div>
+					<table th:replace="factura/plantilla-items :: itemsFactura"></table>
+					<div class="form-group">
+						<div class="col-sm-6">
+							<input type="submit" value="Crear Factura"
+								class="btn btn-secondary" />
 						</div>
 					</div>
 				</form>
