--- a/spring-boot-data-jpa/src/main/resources/templates/factura/js/autocomplete-productos.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/js/autocomplete-productos.html
@@ -15,16 +15,23 @@
 							response($.map(data, function(item) {
 								return {
 									id : item.id,
-									value: item.nombre,
+									value : item.nombre,
 									label : item.nombre,
 									precio : item.precio
 								}
 							}));
 						},
 					});
-				}, select: function(event, ui){
-					$("#buscar_producto").val(ui.item.label);
+				},
+				select : function(event, ui) {
+					var linea = $("#plantillaItemsFactura").html();
+
+					linea = linea.replace(/{ID}/g, ui.item.id);
+					linea = linea.replace(/{NOMBRE}/g, ui.item.label);
+					linea = linea.replace(/{PRECIO}/g, ui.item.precio);
 					
+					$("#cargarItemProductos tbody").append(linea);
+
 					return false;
 				}
 			});
