--- a/spring-boot-data-jpa/src/main/resources/templates/factura/js/autocomplete-productos.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/js/autocomplete-productos.html
@@ -31,11 +31,18 @@
 					linea = linea.replace(/{PRECIO}/g, ui.item.precio);
 					
 					$("#cargarItemProductos tbody").append(linea);
+					itemsHelper.calcularImporte(ui.item.id, ui.item.precio, 1);
 
 					return false;
 				}
 			});
 		});
+		
+		var itemsHelper = {
+				calcularImporte: function(id, precio, cantidad) {
+					$("#total_importe_" + id).html(parseInt(precio) * parseInt(cantidad));
+				}
+		};
 	</script>
 </body>
 </html>
