--- a/spring-boot-data-jpa/src/main/resources/templates/factura/js/autocomplete-productos.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/js/autocomplete-productos.html
@@ -24,6 +24,11 @@
 					});
 				},
 				select : function(event, ui) {
+					if(itemsHelper.hasProducto(ui.item.id)){
+						itemsHelper.incrementaCantidad(ui.item.id, ui.item.precio);
+						return false;
+					}
+					
 					var linea = $("#plantillaItemsFactura").html();
 
 					linea = linea.replace(/{ID}/g, ui.item.id);
@@ -41,6 +46,22 @@
 		var itemsHelper = {
 				calcularImporte: function(id, precio, cantidad) {
 					$("#total_importe_" + id).html(parseInt(precio) * parseInt(cantidad));
+				},
+				hasProducto: function(id) {
+					var resultado = false;
+					
+					$('input[name="item_id[]"]').each(function() {
+						if(parseInt(id) == parseInt($(this).val())) {
+							resultado = true;
+						}
+					});
+					
+					return resultado;
+				},
+				incrementaCantidad: function(id, precio) {
+					var cantidad = $("#cantidad_" + id).val() ? parseInt($("#cantidad_" + id).val()) : 0;
+					$("#cantidad_" + id).val(++cantidad);
+					this.calcularImporte(id, precio, cantidad);
 				}
 		};
 	</script>
