Calcular total factura

--- a/spring-boot-data-jpa/src/main/resources/templates/factura/js/autocomplete-productos.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/js/autocomplete-productos.html
@@ -46,6 +46,7 @@
 		var itemsHelper = {
 				calcularImporte: function(id, precio, cantidad) {
 					$("#total_importe_" + id).html(parseInt(precio) * parseInt(cantidad));
+					this.calcularTotalFactura();
 				},
 				hasProducto: function(id) {
 					var resultado = false;
@@ -65,6 +66,16 @@
 				},
 				eliminarLineaFactura: function(id) {
 					$("#row_" + id).remove();
+					this.calcularTotalFactura();
+				},
+				calcularTotalFactura: function() {
+					var total = 0;
+					
+					$('span[id^="total_importe_"]').each(function() {
+						total += parseInt($(this).html());
+					});
+					
+					$('#total_factura').html(total);
 				}
 		};
 	</script>
