--- a/spring-boot-data-jpa/src/main/resources/templates/factura/form.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/form.html
@@ -58,8 +58,9 @@
 						</thead>
 						<tbody></tbody>
 					</table>
+					<h5>Total: <span class="badge badge-secondary" id="total_factura">0</span></h5>
 
-					<div class="form-group">
+					<div class="form-group row">
 						<div class="col-sm-6">
 							<input type="submit" value="Crear Factura"
 								class="btn btn-secondary" />
