--- a/spring-boot-data-jpa/src/main/resources/templates/factura/js/autocomplete-productos.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/js/autocomplete-productos.html
@@ -41,6 +41,11 @@
 					return false;
 				}
 			});
+			
+			$("form").submit(function() {
+				$("#plantillaItemsFactura").remove();
+				return;
+			});
 		});
 		
 		var itemsHelper = {
