--- a/spring-boot-data-jpa/src/main/resources/templates/ver.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/ver.html
@@ -37,6 +37,7 @@
 							<th>Descripción</th>
 							<th>Fecha</th>
 							<th>Total</th>
+							<th>Ver</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -45,6 +46,8 @@
 							<td th:text="${factura.descripcion}"></td>
 							<td th:text="${factura.createAt}"></td>
 							<td th:text="${factura.total}"></td>
+							<td><a class="btn btn-primary btn-xs"
+								th:href="@{'/factura/ver/' + ${factura.id}}" th:text="'Detalle'"></a></td>
 						</tr>
 					</tbody>
 				</table>
