--- a/spring-boot-data-jpa/src/main/resources/templates/factura/ver.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/ver.html
@@ -24,12 +24,55 @@
 				<ul class="list-group">
 					<li class="list-group-item list-group-item-success"
 						th:text="'Datos de la factura'"></li>
-					<li class="list-group-item" th:text="'Nº Factura: ' + ${factura.id}"></li>
+					<li class="list-group-item"
+						th:text="'Nº Factura: ' + ${factura.id}"></li>
 					<li class="list-group-item"
 						th:text="'Descripción: ' + ${factura.descripcion}"></li>
 					<li class="list-group-item"
 						th:text="'Fecha: ' + ${factura.createAt}"></li>
 				</ul>
+
+				<div class="alert alert-info my-4"
+					th:if="${#lists.isEmpty(factura.items)}"
+					th:text="'La factura está vacía'"></div>
+
+				<table th:if="${not #lists.isEmpty(factura.items)}"
+					class="table table-striped table-hover table-bordered my-3">
+					<thead>
+						<tr>
+							<th>Producto</th>
+							<th>Precio</th>
+							<th>Cantidad</th>
+							<th>Total</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="linea: ${factura.items}">
+							<td th:text="${linea.producto.nombre}"></td>
+							<td th:text="${linea.producto.precio}"></td>
+							<td th:text="${linea.cantidad}"></td>
+							<td th:text="${linea.calcularImporte()}"></td>
+						</tr>
+					</tbody>
+				</table>
+
+				<h5 class="float-right">
+					Total: <span th:text="${factura.total}"
+						class="badge badge-secondary"></span>
+				</h5>
+
+				<div class="card border-info mb-4" style="max-width: 20rem;">
+					<div class="card-header">Observaciones</div>
+					<div class="card-body">
+						<p class="card-text" th:text="${factura.observacion}"
+							th:if="${not #strings.isEmpty(factura.observacion)}"></p>
+						<h4 class="card-title" th:text="'No tiene observaciones'"
+							th:if="${#strings.isEmpty(factura.observacion)}"></h4>
+					</div>
+				</div>
+
+				<a class="btn btn-light btn-xs"
+					th:href="@{'/ver/' + ${factura.cliente.id}}">&laquo; Volver</a>
 			</div>
 		</div>
 	</div>
