--- a/spring-boot-data-jpa/src/main/resources/templates/layout/layout.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/layout/layout.html
@@ -30,7 +30,7 @@
 							sesión</a></li>
 
 					<li sec:authorize="isAuthenticated()" class="dropdown"><a
-						class="btn btn-outline-primary dropdown-toggle" href="#"
+						class="btn btn-primary dropdown-toggle" href="#"
 						role="button" id="dropdownMenuLink" data-toggle="dropdown"
 						aria-haspopup="true" aria-expanded="false"><span
 							sec:authentication="name"></span></a>
