--- a/spring-boot-data-jpa/src/main/resources/templates/ver.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/ver.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="layout/layout :: head">
 </head>
 <body>
@@ -10,7 +11,8 @@
 			<div class="card-header" th:text="${titulo}"></div>
 			<div class="card-body">
 				<h4 class="card-title">
-					<a class="btn btn-primary btn-xs"
+					<a sec:authorize="hasRole('ROLE_ADMIN')"
+						class="btn btn-primary btn-xs"
 						th:href="@{/factura/form/} + ${cliente.id}"
 						th:text="'Crear factura'"></a>
 				</h4>
@@ -37,8 +39,8 @@
 							<th>Descripción</th>
 							<th>Fecha</th>
 							<th>Total</th>
-							<th>Ver</th>
-							<th>Eliminar</th>
+							<th sec:authorize="hasRole('ROLE_ADMIN')">Ver</th>
+							<th sec:authorize="hasRole('ROLE_ADMIN')">Eliminar</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -47,10 +49,14 @@
 							<td th:text="${factura.descripcion}"></td>
 							<td th:text="${factura.createAt}"></td>
 							<td th:text="${factura.total}"></td>
-							<td><a class="btn btn-primary btn-xs"
+							<td sec:authorize="hasRole('ROLE_ADMIN')"><a
+								class="btn btn-primary btn-xs"
 								th:href="@{'/factura/ver/' + ${factura.id}}" th:text="'Detalle'"></a></td>
-							<td><a class="btn btn-danger btn-xs"
-								th:href="@{'/factura/eliminar/' + ${factura.id}}" th:text="'Eliminar'" onclick="return confirm('¿Estás seguro que desea eliminar la factura?')"></a></td>
+							<td sec:authorize="hasRole('ROLE_ADMIN')"><a
+								class="btn btn-danger btn-xs"
+								th:href="@{'/factura/eliminar/' + ${factura.id}}"
+								th:text="'Eliminar'"
+								onclick="return confirm('¿Estás seguro que desea eliminar la factura?')"></a></td>
 						</tr>
 					</tbody>
 				</table>
