--- a/spring-boot-data-jpa/src/main/resources/templates/factura/ver.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/ver.html
@@ -11,7 +11,10 @@
 			<div class="card-body">
 				<h4 class="card-title">
 					<a class="btn btn-light btn-xs"
-						th:href="@{'/ver/' + ${factura.cliente.id}}">&laquo; Volver</a>
+						th:href="@{'/ver/' + ${factura.cliente.id}}">&laquo; Volver</a> <a
+						class="btn btn-danger btn-xs float-right"
+						th:href="@{'/factura/ver/' + ${factura.id}(format=pdf)}">Exportar
+						PDF</a>
 				</h4>
 
 				<ul class="list-group my-2">
