--- a/spring-boot-data-jpa/src/main/resources/templates/factura/ver.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/ver.html
@@ -12,9 +12,12 @@
 				<h4 class="card-title">
 					<a class="btn btn-light btn-xs"
 						th:href="@{'/ver/' + ${factura.cliente.id}}">&laquo; Volver</a> <a
-						class="btn btn-danger btn-xs float-right"
+						class="btn btn-danger btn-xs float-right mx-2"
 						th:href="@{'/factura/ver/' + ${factura.id}(format=pdf)}">Exportar
-						PDF</a>
+						PDF</a> <a
+						class="btn btn-success btn-xs float-right"
+						th:href="@{'/factura/ver/' + ${factura.id}(format=xlsx)}">Exportar
+						XLS</a>
 				</h4>
 
 				<ul class="list-group my-2">
