Implementar link en vista

--- a/spring-boot-data-jpa/src/main/resources/templates/listar.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/listar.html
@@ -14,7 +14,9 @@
 					<a sec:authorize="hasRole('ROLE_ADMIN')"
 						class="btn btn-primary btn-xs" th:href="@{/form}">Crear
 						cliente </a> <a class="btn btn-success btn-xs float-right mb-2"
-						th:href="@{'/listar'(format=csv)}">Exportar CSV</a>
+						th:href="@{'/listar'(format=csv)}">Exportar CSV</a> <a
+						class="btn btn-outline-success btn-xs float-right mx-2 mb-2"
+						th:href="@{'/listar'(format=xml)}">Exportar XML</a>
 				</h4>
 				<table class="table table-striped">
 					<thead>
