--- a/spring-boot-data-jpa/src/main/resources/templates/listar.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/listar.html
@@ -15,8 +15,10 @@
 						class="btn btn-primary btn-xs" th:href="@{/form}">Crear
 						cliente </a> <a class="btn btn-success btn-xs float-right mb-2"
 						th:href="@{'/listar'(format=csv)}">Exportar CSV</a> <a
-						class="btn btn-outline-success btn-xs float-right mx-2 mb-2"
-						th:href="@{'/listar'(format=xml)}">Exportar XML</a>
+						class="btn btn-warning btn-xs float-right mx-2 mb-2"
+						th:href="@{'/listar'(format=xml)}">Exportar XML</a> <a
+						class="btn btn-info btn-xs float-right mx-2 mb-2"
+						th:href="@{'/listar'(format=json)}">Exportar JSON</a>
 				</h4>
 				<table class="table table-striped">
 					<thead>
