--- a/spring-boot-form/src/main/resources/templates/form.html
+++ b/spring-boot-form/src/main/resources/templates/form.html
@@ -23,10 +23,9 @@
 		<div>
 			<label for="email">Email</label>
 			<div>
-				<input type="email" name="email" id="email" />
+				<input type="text" name="email" id="email" />
 			</div>
 		</div>
-
 
 		<div>
 			<input type="submit" value="Enviar" />
