--- a/spring-boot-form/src/main/resources/templates/form.html
+++ b/spring-boot-form/src/main/resources/templates/form.html
@@ -9,6 +9,20 @@
 
 	<form th:action="@{/form}" th:object="${usuario}" method="post">
 		<div>
+			<label for="nombre">Nombre</label>
+			<div>
+				<input type="text" id="nombre" th:field="*{nombre}" />
+			</div>
+			<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
+		</div>
+		<div>
+			<label for="apellidos">Apellidos</label>
+			<div>
+				<input type="text" id="apellidos" th:field="*{apellidos}" />
+			</div>
+			<div th:if="${#fields.hasErrors('apellidos')}" th:errors="*{apellidos}"></div>
+		</div>
+		<div>
 			<label for="username">Username</label>
 			<div>
 				<input type="text" id="username" th:field="*{username}" />
