--- a/spring-boot-form/src/main/resources/templates/form.html
+++ b/spring-boot-form/src/main/resources/templates/form.html
@@ -60,7 +60,7 @@
 		<div>
 			<label for="fechaNacimiento">Fecha de nacimiento</label>
 			<div>
-				<input type="text" id="fechaNacimiento" th:field="*{fechaNacimiento}" placeholder="dd/MM/yyyy" />
+				<input type="date" id="fechaNacimiento" th:field="*{fechaNacimiento}" placeholder="yyyy-MM-dd" />
 			</div>
 			<div th:if="${#fields.hasErrors('fechaNacimiento')}" th:errors="*{fechaNacimiento}"></div>
 		</div>
