--- a/spring-boot-form/src/main/resources/templates/resultado.html
+++ b/spring-boot-form/src/main/resources/templates/resultado.html
@@ -8,6 +8,7 @@
 	<h3 th:text="${titulo}"></h3>
 
 	<ul>
+		<li th:text="${usuario.pais}"></li>
 		<li th:text="${usuario.identificador}"></li>
 		<li th:text="${usuario.nombre}"></li>
 		<li th:text="${usuario.apellidos}"></li>
