--- a/spring-boot-form/src/main/resources/templates/resultado.html
+++ b/spring-boot-form/src/main/resources/templates/resultado.html
@@ -9,6 +9,8 @@
 
 	<ul>
 		<li th:text="${usuario.pais.id}"></li>
+		<li th:text="${usuario.pais.codigo}"></li>
+		<li th:text="${usuario.pais.nombre}"></li>
 		<li th:text="${usuario.identificador}"></li>
 		<li th:text="${usuario.nombre}"></li>
 		<li th:text="${usuario.apellidos}"></li>
