--- a/spring-boot-form/src/main/resources/templates/resultado.html
+++ b/spring-boot-form/src/main/resources/templates/resultado.html
@@ -23,5 +23,10 @@
 		<li th:text="${#dates.format(usuario.fechaNacimiento, 'dd/MM/yyyy')}"></li>
 		<li th:text="${#calendars.format(usuario.fechaNacimiento, 'yyyy-MM-dd')}"></li>
 	</ul>
+	
+	<div>Roles</div>
+	<ul>
+		<li th:each="role: ${usuario.roles}" th:text="${role}"></li>
+	</ul>
 </body>
 </html>
