--- a/spring-boot-form/src/main/resources/templates/form.html
+++ b/spring-boot-form/src/main/resources/templates/form.html
@@ -9,6 +9,12 @@
 
 	<form th:action="@{/form}" th:object="${usuario}" method="post">
 		<div>
+			<label for="habilitar">Habiltiar</label>
+			<div>
+				<input type="checkbox" id="habilitar" th:field="*{habilitar}" />
+			</div>
+		</div>
+		<div>
 			<label for="pais">País</label>
 			<div>
 				<select id="pais" th:field="*{pais}">
