--- a/spring-boot-form/src/main/resources/templates/resultado.html
+++ b/spring-boot-form/src/main/resources/templates/resultado.html
@@ -9,6 +9,7 @@
 
 	<ul>
 		<li th:text="'Habilitado: ' + ${usuario.habilitar}"></li>
+		<li th:text="${usuario.genero}"></li>
 		<li th:text="${usuario.pais.id}"></li>
 		<li th:text="${usuario.pais.codigo}"></li>
 		<li th:text="${usuario.pais.nombre}"></li>
