--- a/spring-boot-form/src/main/resources/templates/form.html
+++ b/spring-boot-form/src/main/resources/templates/form.html
@@ -15,6 +15,22 @@
 			</div>
 		</div>
 		<div>
+			<label>Género</label>
+			<div th:each="gen: ${generos}">
+				<input type="radio" th:field="*{genero}" th:value="${gen}" />
+				<label th:for="${#ids.prev('genero')}" th:text="${gen}"></label>
+			</div>
+<!-- 			<div> -->
+<!-- 				<input type="radio" id="generoHombre" th:field="*{genero}" value="Hombre" /> -->
+<!-- 				<label for="generoHombre">Hombre</label> -->
+<!-- 			</div> -->
+<!-- 			<div> -->
+<!-- 				<input type="radio" id="generoMujer" th:field="*{genero}" value="Mujer" /> -->
+<!-- 				<label for="generoMujer">Mujer</label> -->
+<!-- 			</div> -->
+			<div th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}"></div>
+		</div>
+		<div>
 			<label for="pais">País</label>
 			<div>
 				<select id="pais" th:field="*{pais}">
