--- a/spring-boot-form/src/main/resources/templates/form.html
+++ b/spring-boot-form/src/main/resources/templates/form.html
@@ -108,6 +108,8 @@
 		<div>
 			<input type="submit" value="Enviar" />
 		</div>
+		
+		<input type="hidden" th:field="*{valorSecreto}" />
 	</form>
 </body>
 </html>
