--- a/spring-boot-form/src/main/resources/templates/form.html
+++ b/spring-boot-form/src/main/resources/templates/form.html
@@ -3,113 +3,115 @@
 <head>
 <meta charset="UTF-8">
 <title th:text="${titulo}"></title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
 	<h3 th:text="${titulo}"></h3>
-
-	<form th:action="@{/form}" th:object="${usuario}" method="post">
-		<div>
-			<label for="habilitar">Habiltiar</label>
-			<div>
-				<input type="checkbox" id="habilitar" th:field="*{habilitar}" />
+	<div class="container">
+		<form th:action="@{/form}" th:object="${usuario}" method="post">
+			<div class="form-group row">
+				<label for="habilitar" class="col-form-label col-sm-2">Habiltiar</label>
+				<div class="row col-sm-4">
+					<input type="checkbox" id="habilitar" th:field="*{habilitar}" class="form-control col-sm-1" />
+				</div>
 			</div>
-		</div>
-		<div>
-			<label>Género</label>
-			<div th:each="gen: ${generos}">
-				<input type="radio" th:field="*{genero}" th:value="${gen}" />
-				<label th:for="${#ids.prev('genero')}" th:text="${gen}"></label>
+			<div class="form-group row">
+				<label class="col-form-label col-sm-2">Género</label>
+				<div th:each="gen: ${generos}" class="row col-sm-2">
+					<input type="radio" th:field="*{genero}" th:value="${gen}" class="form-control col-sm-2" />
+					<label th:for="${#ids.prev('genero')}" th:text="${gen}" class="col-form-label col-sm-2"></label>
+				</div>
+	<!-- 			<div> -->
+	<!-- 				<input type="radio" id="generoHombre" th:field="*{genero}" value="Hombre" /> -->
+	<!-- 				<label for="generoHombre">Hombre</label> -->
+	<!-- 			</div> -->
+	<!-- 			<div> -->
+	<!-- 				<input type="radio" id="generoMujer" th:field="*{genero}" value="Mujer" /> -->
+	<!-- 				<label for="generoMujer">Mujer</label> -->
+	<!-- 			</div> -->
+				<div th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}" class="alert alert-danger"></div>
 			</div>
-<!-- 			<div> -->
-<!-- 				<input type="radio" id="generoHombre" th:field="*{genero}" value="Hombre" /> -->
-<!-- 				<label for="generoHombre">Hombre</label> -->
-<!-- 			</div> -->
-<!-- 			<div> -->
-<!-- 				<input type="radio" id="generoMujer" th:field="*{genero}" value="Mujer" /> -->
-<!-- 				<label for="generoMujer">Mujer</label> -->
-<!-- 			</div> -->
-			<div th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}"></div>
-		</div>
-		<div>
-			<label for="pais">País</label>
-			<div>
-				<select id="pais" th:field="*{pais}">
-					<option value="">Seleccionar</option>
-					<option th:each="pais: ${listaPaises}" th:text="${pais.nombre}" th:value="${pais.id}"></option>
-				</select>
+			<div class="form-group row">
+				<label for="pais" class="col-form-label col-sm-2">País</label>
+				<div class="col-sm-4">
+					<select id="pais" th:field="*{pais}" class="form-control">
+						<option value="">Seleccionar</option>
+						<option th:each="pais: ${listaPaises}" th:text="${pais.nombre}" th:value="${pais.id}"></option>
+					</select>
+				</div>
+				<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}" class="alert alert-danger"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}"></div>
-		</div>
-		<div>
-			<label>Roles</label>
-			<div th:each="role: ${listaRoles}">
-				<input type="checkbox" th:field="*{roles}" th:value="${role.id}" th:checked="${#lists.contains(usuario.roles, role)}" />
-				<label th:for="${#ids.prev('roles')}" th:text="${role.nombre}"></label>
+			<div class="form-group row">
+				<label class="col-form-label col-sm-2">Roles</label>
+				<div th:each="role: ${listaRoles}" class="row col-sm-2">
+					<input type="checkbox" th:field="*{roles}" th:value="${role.id}" th:checked="${#lists.contains(usuario.roles, role)}" class="form-control col-sm-2" />
+					<label th:for="${#ids.prev('roles')}" th:text="${role.nombre}" class="col-form-label col-sm-2"></label>
+				</div>
+				<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}" class="alert alert-danger"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}"></div>
-		</div>
-		<div>
-			<label for="identificador">DNI</label>
-			<div>
-				<input type="text" id="identificador" th:field="*{identificador}" />
+			<div class="form-group row">
+				<label for="identificador" class="col-form-label col-sm-2">DNI</label>
+				<div class="col-sm-4">
+					<input type="text" id="identificador" th:field="*{identificador}" class="form-control" />
+				</div>
+				<div th:if="${#fields.hasErrors('identificador')}" th:errors="*{identificador}" class="alert alert-danger"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('identificador')}" th:errors="*{identificador}"></div>
-		</div>
-		<div>
-			<label for="nombre">Nombre</label>
-			<div>
-				<input type="text" id="nombre" th:field="*{nombre}" />
+			<div class="form-group row">
+				<label for="nombre" class="col-form-label col-sm-2">Nombre</label>
+				<div class="col-sm-4">
+					<input type="text" id="nombre" th:field="*{nombre}" class="form-control" />
+				</div>
+				<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="alert alert-danger"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
-		</div>
-		<div>
-			<label for="apellidos">Apellidos</label>
-			<div>
-				<input type="text" id="apellidos" th:field="*{apellidos}" />
+			<div class="form-group row">
+				<label for="apellidos" class="col-form-label col-sm-2">Apellidos</label>
+				<div class="col-sm-4">
+					<input type="text" id="apellidos" th:field="*{apellidos}" class="form-control" />
+				</div>
+				<div th:if="${#fields.hasErrors('apellidos')}" th:errors="*{apellidos}" class="alert alert-danger"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('apellidos')}" th:errors="*{apellidos}"></div>
-		</div>
-		<div>
-			<label for="username">Username</label>
-			<div>
-				<input type="text" id="username" th:field="*{username}" />
+			<div class="form-group row">
+				<label for="username" class="col-form-label col-sm-2">Username</label>
+				<div class="col-sm-4">
+					<input type="text" id="username" th:field="*{username}" class="form-control" />
+				</div>
+				<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="alert alert-danger"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
-		</div>
-		<div>
-			<label for="password">Password</label>
-			<div>
-				<input type="password" id="password" th:field="*{password}"  />
+			<div class="form-group row">
+				<label for="password" class="col-form-label col-sm-2">Password</label>
+				<div class="col-sm-4">
+					<input type="password" id="password" th:field="*{password}" class="form-control"  />
+				</div>
+				<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="alert alert-danger"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
-		</div>
-		<div>
-			<label for="email">Email</label>
-			<div>
-				<input type="text" id="email" th:field="*{email}" />
+			<div class="form-group row">
+				<label for="email" class="col-form-label col-sm-2">Email</label>
+				<div class="col-sm-4">
+					<input type="text" id="email" th:field="*{email}" class="form-control" />
+				</div>
+				<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="alert alert-danger"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
-		</div>
-		<div>
-			<label for="cuenta">Cuenta</label>
-			<div>
-				<input type="number" id="cuenta" th:field="*{cuenta}" />
+			<div class="form-group row">
+				<label for="cuenta" class="col-form-label col-sm-2">Cuenta</label>
+				<div class="col-sm-4">
+					<input type="number" id="cuenta" th:field="*{cuenta}" class="form-control" />
+				</div>
+				<div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}" class="alert alert-danger"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}"></div>
-		</div>
-		<div>
-			<label for="fechaNacimiento">Fecha de nacimiento</label>
-			<div>
-				<input type="date" id="fechaNacimiento" th:field="*{fechaNacimiento}" placeholder="yyyy-MM-dd" />
+			<div class="form-group row">
+				<label for="fechaNacimiento" class="col-form-label col-sm-2">Fecha de nacimiento</label>
+				<div class="col-sm-4">
+					<input type="date" id="fechaNacimiento" th:field="*{fechaNacimiento}" placeholder="yyyy-MM-dd" class="form-control" />
+				</div>
+				<div th:if="${#fields.hasErrors('fechaNacimiento')}" th:errors="*{fechaNacimiento}" class="alert alert-danger"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('fechaNacimiento')}" th:errors="*{fechaNacimiento}"></div>
-		</div>
-
-		<div>
-			<input type="submit" value="Enviar" />
-		</div>
-		
-		<input type="hidden" th:field="*{valorSecreto}" />
-	</form>
+	
+			<div class="form-group row">
+				<input type="submit" value="Enviar" class="btn btn-primary" />
+			</div>
+			
+			<input type="hidden" th:field="*{valorSecreto}" />
+		</form>
+	</div>
 </body>
 </html>
