--- a/spring-boot-form/src/main/resources/templates/resultado.html
+++ b/spring-boot-form/src/main/resources/templates/resultado.html
@@ -6,31 +6,34 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-	<h3 th:text="${titulo}"></h3>
-
-	<ul>
-		<li th:text="'Habilitado: ' + ${usuario.habilitar}"></li>
-		<li th:text="${usuario.genero}"></li>
-		<li th:text="${usuario.pais.id}"></li>
-		<li th:text="${usuario.pais.codigo}"></li>
-		<li th:text="${usuario.pais.nombre}"></li>
-		<li th:text="${usuario.identificador}"></li>
-		<li th:text="${usuario.nombre}"></li>
-		<li th:text="${usuario.apellidos}"></li>
-		<li th:text="${usuario.username}"></li>
-		<li th:text="${usuario.password}"></li>
-		<li th:text="${usuario.email}"></li>
-		<li th:text="${usuario.cuenta}"></li>
-		<!-- Tanto dates como calendars tienen la misma utilidad -->
-		<!-- Podemos leer la documentación de Thymeleaf en https://www.thymeleaf.org/documentation.html -->
-		<li th:text="${#dates.format(usuario.fechaNacimiento, 'dd/MM/yyyy')}"></li>
-		<li th:text="${#calendars.format(usuario.fechaNacimiento, 'yyyy-MM-dd')}"></li>
-		<li th:text="'Valor oculto: ' + ${usuario.valorSecreto}"></li>
-	</ul>
-	
-	<div>Roles</div>
-	<ul>
-		<li th:each="role: ${usuario.roles}" th:text="${role.id} + ': ' + ${role.nombre} + ' - ' + ${role.role}"></li>
-	</ul>
+	<div class="container">
+		<a th:href="@{/form}" class="btn btn-primary my-3">Volver</a>
+		
+		<ul class="list-group my-3">
+			<li class="list-group-item active" th:text="${titulo}"></li>
+			<li class="list-group-item" th:text="'Habilitado: ' + ${usuario.habilitar}"></li>
+			<li class="list-group-item" th:text="${usuario.genero}"></li>
+			<li class="list-group-item" th:text="${usuario.pais.id}"></li>
+			<li class="list-group-item" th:text="${usuario.pais.codigo}"></li>
+			<li class="list-group-item" th:text="${usuario.pais.nombre}"></li>
+			<li class="list-group-item" th:text="${usuario.identificador}"></li>
+			<li class="list-group-item" th:text="${usuario.nombre}"></li>
+			<li class="list-group-item" th:text="${usuario.apellidos}"></li>
+			<li class="list-group-item" th:text="${usuario.username}"></li>
+			<li class="list-group-item" th:text="${usuario.password}"></li>
+			<li class="list-group-item" th:text="${usuario.email}"></li>
+			<li class="list-group-item" th:text="${usuario.cuenta}"></li>
+			<!-- Tanto dates como calendars tienen la misma utilidad -->
+			<!-- Podemos leer la documentación de Thymeleaf en https://www.thymeleaf.org/documentation.html -->
+			<li class="list-group-item" th:text="${#dates.format(usuario.fechaNacimiento, 'dd/MM/yyyy')}"></li>
+			<li class="list-group-item" th:text="${#calendars.format(usuario.fechaNacimiento, 'yyyy-MM-dd')}"></li>
+			<li class="list-group-item" th:text="'Valor oculto: ' + ${usuario.valorSecreto}"></li>
+		</ul>
+		
+		<ul class="list-group my-3">
+			<li class="list-group-item active">Roles</li>
+			<li class="list-group-item" th:each="role: ${usuario.roles}" th:text="${role.id} + ': ' + ${role.nombre} + ' - ' + ${role.role}"></li>
+		</ul>
+	</div>
 </body>
 </html>
