--- a/spring-boot-form/src/main/resources/templates/form.html
+++ b/spring-boot-form/src/main/resources/templates/form.html
@@ -6,9 +6,7 @@
 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
-	<div class="alert alert-success">
-		<span th:text="'Tiempo transcurrido: ' + ${tiempoTranscurrido} + ' en milisegundos'"></span>
-	</div>
+	<section th:replace="componentes/tiempo :: interceptor"></section>
 	<div class="container">
 		<h3 th:text="${titulo}"></h3>
 		<form th:action="@{/form}" th:object="${usuario}" method="post">
