--- a/spring-boot-form/src/main/resources/templates/resultado.html
+++ b/spring-boot-form/src/main/resources/templates/resultado.html
@@ -6,9 +6,7 @@
 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
-	<div class="alert alert-success">
-		<span th:text="'Tiempo transcurrido: ' + ${tiempoTranscurrido} + ' en milisegundos'"></span>
-	</div>
+	<section th:replace="componentes/tiempo :: interceptor"></section>
 	<div class="container">
 		<a th:href="@{/form}" class="btn btn-primary my-3">Volver</a>
 		
